--- a/css/global/global.css
+++ b/css/global/global.css
@@ -21,8 +21,12 @@ a {
 ul {
   list-style: none;
 }
-
 /* Components */
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
 .btn {
   max-width: 217px;
   text-transform: uppercase;
@@ -33,7 +37,7 @@ ul {
   font-weight: 600;
   font-size: 18px;
   line-height: 1.33;
-  color: #332200;
+  color: var(--p5);
   background: linear-gradient(#ffbf00, #f2a50c);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
