--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
-@import "./global.css";
-@import "./header.css";
-@import "./intro.css";
+/* Global Styles */
+@import "./global/global.css";
+@import "./global/typography.css";
+@import "./global/colors.css";
+@import "./global/header.css";
+
+/* Home Page */
+@import "./home/intro.css";
