--- a/css/global/header.css
+++ b/css/global/header.css
@@ -16,10 +16,6 @@
 .header-menu a {
   color: inherit;
   display: inline-block;
-  font-family: "Poppins";
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 32px;
   padding: 12px 0px;
   position: relative;
 }
@@ -35,6 +31,8 @@
   width: 100%;
   transition: 0.3s;
 }
+
+/* Media Queries */
 @media (max-width: 800px) {
   .header-menu {
     gap: 24px;
