--- a/css/home/intro.css
+++ b/css/home/intro.css
@@ -1,6 +1,17 @@
 .intro-bg {
   background-color: var(--c12);
   box-shadow: inset 0 -120px var(--c0);
+  position: relative;
+}
+.intro-bg::after {
+  content: "";
+  display: block;
+  background: url("/assets/svg/dec/bottom-left.svg") no-repeat;
+  height: 52px;
+  width: 52px;
+  position: absolute;
+  left: 40px;
+  bottom: 160px;
 }
 .intro {
   display: grid;
@@ -21,11 +32,32 @@
   border-radius: 5px;
   height: 100%;
 }
+
+/* Media Queries */
+@media (max-width: 1400px) {
+  .intro-bg::after {
+    background-size: contain;
+    height: 40px;
+    left: 20px;
+    bottom: 150px;
+  }
+}
+@media (max-width: 1200px) {
+  .intro-text h1 {
+    font-size: 3rem;
+  }
+  .intro-text p {
+    font-size: 1.25rem;
+  }
+}
 @media (max-width: 800px) {
   .intro-bg {
     background-color: var(--c11);
     padding-top: 40px;
     box-shadow: inset 0 -60px var(--c0);
+  }
+  .intro-bg::after {
+    display: none;
   }
   .intro {
     grid-template-columns: 1fr;
@@ -33,6 +65,13 @@
   }
   .intro-text {
     padding-bottom: 0px;
+  }
+  .intro-text h1 {
+    font-size: 2rem;
+    margin-bottom: 16px;
+  }
+  .intro-text p {
+    font-size: 1.25rem;
   }
   .intro img {
     height: 300px;
