--- a/css/global/header.css
+++ b/css/global/header.css
@@ -26,6 +26,7 @@
   width: 0%;
   background-color: var(--c0);
   position: absolute;
+  transition: 0.3s;
 }
 .header-menu a:hover::after {
   width: 100%;
@@ -38,7 +39,7 @@
     gap: 24px;
   }
   .header-menu a {
-    font-size: 16px;
+    font-size: 1rem;
     background-color: var(--c11);
     padding: 8px 12px;
     border-radius: 5px;
@@ -60,6 +61,6 @@
     gap: 20px;
   }
   .header-menu a {
-    font-size: 14px;
+    font-size: 0.875rem;
   }
 }
