--- a/css/global/typography.css
+++ b/css/global/typography.css
@@ -36,3 +36,38 @@
 .font-1-xs {
   font: 600 0.75rem/1.33 "Poppins", sans-serif;
 }
+
+@media (max-width: 1200px) {
+  .font-1-xll {
+    font-size: 3rem;
+  }
+  .font-2-l,
+  .font-2-l-b {
+    font-size: 1.25rem;
+  }
+  .font-1-xl {
+    font-size: 1.75rem;
+  }
+  .font-2-m {
+    font-size: 1.25rem;
+  }
+}
+@media (max-width: 800px) {
+  .font-1-xll {
+    font-size: 2rem;
+  }
+  .font-1-xl {
+    font-size: 1.5rem;
+  }
+  .font-2-m {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 600px) {
+  .font-1-xl {
+    font-size: 1.125rem;
+  }
+  .font-2-m {
+    font-size: 0.875rem;
+  }
+}
