--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,10 @@
 @import "./global/global.css";
 @import "./global/typography.css";
 @import "./global/colors.css";
+@import "./global/components.css";
 @import "./global/header.css";
 
 /* Home Page */
 @import "./home/intro.css";
-@import "./home/bikes.css";
+@import "./home/bike-list.css";
+@import "./home/tech.css";
